fix: overflow

--- a/src/app/monitoring/containers/panel/panel.component.scss
+++ b/src/app/monitoring/containers/panel/panel.component.scss
@@ -10,7 +10,9 @@
     padding-right: 1.8em;
     text-align: right;
 }
-
+.section-content {
+    margin-top: 2.5em;
+}
 .charts {
     margin: 0.2em 0 0.2em 0;
 
